1.新增日志级别设置 2.生产者新增关键字用于分片

--- a/test/k-rocketmq-test.yml
+++ b/test/k-rocketmq-test.yml
@@ -7,7 +7,9 @@ go:
       timeout: 5
       topic_queue_nums: 16
       group: sjProductGroup
+      log_level: error # mq日志级别: debug, warn, error, fatal, info(默认)
     consumer:
       timeout: 300
       group: sjConsumerGroup
+      log_level: error # mq日志级别: debug, warn, error, fatal, info(默认)
 
